- Fix for bug #14580: Made key() binary safe